[gd_scene load_steps=4 format=2]

[ext_resource path="res://button_stop.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 5.11843, 0.669333 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 5.2311, 7.39257 )

[node name="ButtonStopArea" type="Area2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0712357, 2.50864 )
rotation = -3.14159
shape = SubResource( 21 )

[node name="ButtonBody" type="StaticBody2D" parent="."]
process_priority = -1
position = Vector2( 0.589027, 5.68275 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonBody"]
position = Vector2( -0.670914, 3.04921 )
shape = SubResource( 20 )
one_way_collision = true
__meta__ = {
"_editor_description_": ""
}

[connection signal="area_entered" from="." to="." method="_on_ButtonStopArea_area_entered" flags=6]
[connection signal="body_entered" from="." to="." method="_on_ButtonStopArea_body_entered"]
